# uav_landing

./: CMakeLists.txt  README.md  package.xml  setup.py
config/camera_calibration/: calib.yaml
config/drone/: drone_fsm.yaml  landing_controller.yaml
config/positioning/: aruco_estimator.yaml
config/ugv/: ugv_control.yaml
launch/: uav_landing.launch
launch/drone/: drone_fsm.launch  landing_controller.launch
launch/positioning/: aruco_estimator.launch
launch/spawners/: spawn_husky.launch  spawn_iris.launch
launch/ugv/: ugv_control.launch
models/husky/urdf/: ugv.urdf.xacro
scripts/drone/: drone_fsm.py  landing_controller.py
src/: aruco_estimator.cpp
src/drone/: offboard.py
